writing-a-c-compiler-tests/tests/chapter_9/valid/stack_arguments/stack_alignment.c
 
int even_arguments(int a, int b, int c, int d, int e, int f, int g, int h);

int odd_arguments(int a, int b, int c, int d, int e, int f, int g, int h, int i);

int main(void) {
    
    int x = 3;
 
    even_arguments(1, 2, 3, 4, 5, 6, 7, 8);
    odd_arguments(1, 2, 3, 4, 5, 6, 7, 8, 9);
   
    return x;
}