writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/wrong_parameter_names.c
int foo(int a);

int main(void) {
    return foo(3);
}

int foo(int x) {
    
    return a;
}